2003-06-09  Matti Aarnio  <mea@zmailer.org>

	* man/Makefile.in, man/mailq-m-generate.pl, scheduler/mailq.inc,
	  man/man-to-html.sh, man/mailq.1.in:
	    Generating "mailq-m(5)" man-page from within mailq.inc
	    stored XMLish comments.

	* include/shmmib.h, router/daemonsub.c, router/rfc822.c,
	  smtpserver/smtpserver.c, smtpsserver/smtpdata.c:
	    - Count router process faults explicitely
	    - Let smtpserver to count attempted incoming recipients
	      (similarly with ss.ReceivedMessages counter)
	    - Let smtpserver to count instances, when arriving
	      connection has been summarily closed due to too high
	      a load.  (Limit criterias are PARAM parametrizable.)
	    - Track router actual job processing instances failing
	      somehow, and count those separately. 

2003-06-05  Matti Aarnio  <mea@zmailer.org>

	* scheduler/mailq.inc:
	    Print added seen EHLO-capability counters, and sent SMTP options
	    counters.

2003-06-04  Matti Aarnio  <mea@zmailer.org>

	* include/shmmib.h, smtpserver/smtpcmds.c, transports/smtp/smtp.c:
	    Count several ESMTP options seen, (and used) by the smtp-ta,
	    and used by the smtp clients.

	* include/shmmib.h, scheduler/mailq.inc, smtpserver/smtptls.c,
	  transports/mailbox/mailbox.c, transports/smtp/smtp.c,
	  transports/hold/hold.c, transports/errormail/errormail.c,
	  transports/sm/sm.c, transports/expirer/expirer.c,
	  transports/reroute/reroute.c:
	    Changed names of a number of variables, and added basic counters
	    into all transport agents, which didn't have anything.

	* Makefile.in, compat/Makefile.in, doc/Makefile.in, lib/Makefile.in,
	  libc/Makefile.in, libident/Makefile.in, libmalloc/Makefile.in,
	  libresolv/Makefile.in, libs/Makefile.in, libsh/Makefile.in,
	  man/Makefile.in, proto/Makefile.in, router/Makefile.in,
	  scheduler/Makefile.in, sfio/Makefile.in, smtpserver/Makefile.in,
	  ssl/Makefile.in, transports/Makefile.in, utils/Makefile.in: