@@ -1029,12 +1029,14 @@ int insecure;
 
     availspace = fd_statfs(FILENO(SS->mfp));
     if (availspace < 0)
-	availspace = 2000000000;	/* Over 2G ? */
-
+	availspace = LONG_MAX / 1024;	/* Over 2G ? */
     if (availspace >= 0)
-      MIBMtaEntry->sys.SpoolFreeSpace = availspace / 1024;
-
+      MIBMtaEntry->sys.SpoolFreeSpace = availspace;
     availspace -= minimum_availspace;
+    if (availspace > (LONG_MAX / 1024))
+      availspace = LONG_MAX / 1024;
+    availspace *= 1024;
+
 
     if (ferror(SS->mfp)) {
 	smtp_tarpit(SS);
